<resources>

    <!-- URLs - only English -->
    <string name="version" translatable="false">version 1.1.39</string>
    <string name="app_name" translatable="false">OM Taxi</string>
    <string name="omtaxi_email" translatable="false">omtaxi@mail.ru</string>
    <string name="omtaxi_site" translatable="false">omtaxi.ru</string>
    <string name="omtaxi_phone" translatable="false">+79955015060</string>
    <string name="omtaxi_name" translatable="false">omtaxi</string>
    <string name="omtaxi_share" translatable="false">https://play.google.com/store/apps/details?id=ru.omapp.driver</string>
    <string name="url_install" translatable="false">https://play.google.com/store/apps/details?id=ru.yandex.taximeter</string>
    <string name="url_photocontrol" translatable="false">https://driver.yandex/photocontrol/</string>
    <string name="url_firsttrip" translatable="false">https://driver.yandex/урок-№1/</string>
    <string name="url_noorders" translatable="false">https://driver.yandex/block-new/</string>
    <string name="url_faq" translatable="false">https://driver.yandex/новичку/</string>
    <string name="market_whatsapp" translatable="false">market://details?id=com.whatsapp</string>
    <string name="market_viber" translatable="false">market://details?id=com.viber.voip</string>
    <string name="market_telegram" translatable="false">market://details?id=org.telegram.messenger</string>
    <!-- Common strings -->
    <string name="partner">Official Partner</string>
    <string name="menu">Menu</string>>

    <!-- Sidebar menu -->
    <string name="registration">Registration online</string>
    <string name="instructions">Useful instructions</string>
    <string name="conditions">Working conditions</string>
    <string name="contacts">Contacts</string>
    <string name="communicate">Communication</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <!-- Instructions -->
    <string name="install">Installing a taximeter</string>
    <string name="photocontrol">Photo control</string>
    <string name="firsttrip">First Trip</string>
    <string name="noorders">Orders do not arrive?</string>
    <string name="faq">FAQ</string>

    <!-- Work conditions -->
    <string name="text_conditions">
    Conditions: \n
    » Connecting your car for free on the day of treatment \n
    » Help with pasting machine in white or yellow \n
    » We will issue a taxi license (from 2 days) \n
    » Payment of earnings clearly once a week on Wednesdays \n
    \n
    Income: \n
    » From 5000-6000 rubles per day on ECONOMY rates \n
    » From 6000-7000 rubles per day at COMFORT rates \n
    \n
    Bonus: \n
    » Increasing coefficient during high demand (stable morning / evening / weekend / rain) \n
    » Easy navigation \n
    » Bonuses from partners (food, fuel, washing, mobile communication) \n
    </string>

    <!-- Online registration -->
    <string name="email_registration">Registration</string>
    <string name="town">Your town/city</string>
    <string name="fio">*Full name</string>
    <string name="phone">*Phone</string>
    <string name="rights">*Series and number of rights</string>
    <string name="begin_date">*Date of issue of rights</string>
    <string name="end_date">*End date of rights</string>
    <string name="car_brand">Car brand</string>
    <string name="car_model">Car model</string>
    <string name="car_color">Car color</string>
    <string name="car_date">Year of manufacture</string>
    <string-array name="car_colors">
        <item>Beige</item>
        <item>White</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Gray</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Black</item>
    </string-array>
    <string name="car_number">State number</string>
    <string name="license">License number and serial number</string>
    <string name="promo_code">Promo-code (if it exists)</string>
    <string name="processing">
    When I push button "Begin working" I hereby consent to the processing and transfer
    of my personal data in order to ensure the use of the Yandex.Taxi service.
    </string>
    <string name="begin">Begin working</string>
    <string name="sendmail">Send mail...</string>
    <string name="success">Success.\nWe are call you in few days.</string>

    <!-- Contacts -->
    <string name="whatsapp">WhatsApp</string>
    <string name="viber">Viber</string>
    <string name="telegram">Telegram</string>
    <string name="install_whatsapp">Install WhatsApp android application</string>
    <string name="install_viber">Install Viber android application</string>
    <string name="install_telegram">Install Telegram android application</string>
    <string name="author">App developed by Lavrov Sergey</string>

</resources>
