<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_group">
        <item
            android:id="@+id/nav_online"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_online"
            android:title="@string/online" />
        <item
            android:id="@+id/nav_instructions"
            android:icon="@drawable/ic_instructions"
            android:title="@string/instructions" />
        <item
            android:id="@+id/nav_conditions"
            android:icon="@drawable/ic_conditions"
            android:title="@string/conditions" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts" />
    </group>

    <item
        android:id="@+id/nav_communicate"
        android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
