<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lt_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fio"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edt_rights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/rights"
            android:inputType="number" />

        <EditText
            android:id="@+id/edt_begin_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/begin_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/edt_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/end_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/edt_car_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/car_brand"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/car_model"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_car_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/car_color"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_car_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/car_number"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/license"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/chk_processing_yandex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/processing_yandex" />

        <CheckBox
            android:id="@+id/chk_processing_contract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/processing_contract" />

        <Button
            android:id="@+id/btn_begin"
            android:onClick="OnClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/begin" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>