<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_whatsapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:text="@string/whatsapp" />

        <Button
            android:id="@+id/btn_viber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:text="@string/viber" />

        <Button
            android:id="@+id/btn_telegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:text="@string/telegram" />

        <Button
            android:id="@+id/btn_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/omtaxi_phone" />

        <Button
            android:id="@+id/btn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/omtaxi_email" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>