<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.omapp.driver.MainActivity">

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClick"
            android:text="@string/registration"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"></Button>

        <Button
            android:id="@+id/btn_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClick"
            android:text="@string/instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"></Button>

        <Button
            android:id="@+id/btn_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClick"
            android:text="@string/conditions"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"></Button>

        <Button
            android:id="@+id/btn_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClick"
            android:text="@string/contacts"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"></Button>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>